src/test/ui/extern-prelude-fail.stderr
error[E0432]: unresolved import `extern_prelude`
  --> $DIR/extern-prelude-fail.rs:7:9
   |
LL |     use extern_prelude::S;
   |         ^^^^^^^^^^^^^^ maybe a missing `extern crate extern_prelude;`?

error[E0433]: failed to resolve: maybe a missing `extern crate extern_prelude;`?
  --> $DIR/extern-prelude-fail.rs:8:15
   |
LL |     let s = ::extern_prelude::S;
   |               ^^^^^^^^^^^^^^ maybe a missing `extern crate extern_prelude;`?

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
